--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <version>2.2.220</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.3</version>
+        </dependency>
     </dependencies>
 
     <build>
