--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,16 +1,24 @@
+# Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/quickchat
 spring.datasource.username=dev
 spring.datasource.password=dev@123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# JPA Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.show-sql=true
 
+# Connection Pool Configuration
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1800000
+
+# Server Configuration
 server.port=8080
 
-
+# Logging Configuration - comment out if it is not necessary
 logging.level.org.springframework=DEBUG
-logging.level.org.hibernate=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
